--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,8 +1,8 @@
-name: CI
+name: FirstStep
 
 on:
-  #schedule:
-    #- cron: 0 */1 * * *
+  schedule:
+    - cron: 0 */2 * * *
   workflow_dispatch:
 
 jobs:
